[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-left-turn-vla"
version = "0.1.0"
description = "SmolVLA fine-tuning and inference for a simulator left-turn policy"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.119.1",
  "huggingface-hub>=0.36.0,<2",
  "lerobot[smolvla,training]==0.6.0",
  "matplotlib>=3.9,<4",
  "numpy>=2,<2.3",
  "pandas>=2.3,<3",
  "pillow>=10.4,<13",
  "uvicorn[standard]>=0.38,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1", "pytest>=8.4,<9", "ruff>=0.12,<1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
